General layout of filters panel created. Alignment of elements still needs to be fixed.

--- a/style.css
+++ b/style.css
@@ -42,6 +42,21 @@
 
    }
    
+   #filterPanel {
+   	margin-left: 5px;
+  	width: 230px;
+  	height: 500px;
+  	border: 1px solid grey;
+   }
+   
+
+   #filterMenu {
+   	margin-left: 5px;
+   	width: 230px;
+   	height: 200px;
+   	border: 1px solid grey;
+   }
+   
    #right {
    	width: calc(100% - 256px);
    	height: 100%;
